apps/streamlit/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-deployment
  namespace: streamlit
  labels:
    app: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: juanse1796/streamlit-mlops:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: streamlit
  labels:
    app: streamlit
spec:
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
